; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_pcnet32.c_pcnet32_wio_read_bcr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_pcnet32.c_pcnet32_wio_read_bcr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCNET32_WIO_RAP = common dso_local global i64 0, align 8
@PCNET32_WIO_BDP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @pcnet32_wio_read_bcr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcnet32_wio_read_bcr(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @PCNET32_WIO_RAP, align 8
  %8 = add i64 %6, %7
  %9 = call i32 @outw(i32 %5, i64 %8)
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @PCNET32_WIO_BDP, align 8
  %12 = add i64 %10, %11
  %13 = call i32 @inw(i64 %12)
  ret i32 %13
}

declare dso_local i32 @outw(i32, i64) #1

declare dso_local i32 @inw(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
